@@ -49,7 +49,7 @@ General Public License version 2 and states the following:
 Copyright (C) 2000-2007 - Laurent Destailleur - eldy@users.sourceforge.net
 
 Unless otherwise stated all code is licensed under the MPL 1.1 and has a Copyright
-2006-2007 by ispCP.
+2006-2008 by ispCP.
 
 Please have a look at these Licenses if intrested. They are shipped with
 this release in the next files:
